# swagger_mcp_server

./: .gitignore  README.md  config.example.json  pyproject.toml
src/swagger_mcp_server/: server.py  server_http.py
