[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swagger_mcp_server"
version = "0.1.0"
description = "MCP Server for OpenAPI/Swagger APIs with lazy loading"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "starlette>=0.52.1",
    "uvicorn>=0.40.0",
    "sse-starlette>=3.2.0",
]

[project.scripts]
swagger_mcp_server = "swagger_mcp_server:main"
swagger_mcp_server_http = "swagger_mcp_server.server_http:main"

[project.optional-dependencies]
http = ["starlette>=0.40.0", "uvicorn>=0.30.0", "sse-starlette>=2.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/swagger_mcp_server"]
